# docs/swagger.json
@@ -65,7 +65,7 @@
             }
         },
         "/auth/oauth/callback": {
-            "post": {
+            "get": {
                 "description": "Handles the callback from OAuth provider",
                 "consumes": [
                     "application/json"
@@ -79,13 +79,11 @@
                 "summary": "OAuth Callback",
                 "parameters": [
                     {
-                        "description": "OAuth callback data",
+                        "type": "string",
+                        "description": "Authorization code from OAuth provider",
                         "name": "code",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/http.OAuthCallbackRequest"
-                        }
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -200,17 +198,6 @@
             ],
             "properties": {
                 "refresh_token": {
-                    "type": "string"
-                }
-            }
-        },
-        "http.OAuthCallbackRequest": {
-            "type": "object",
-            "required": [
-                "code"
-            ],
-            "properties": {
-                "code": {
                     "type": "string"
                 }
             }
